# vostok-delinker

./: .gitignore  Cargo.toml  README.md  asm.asm  build_base.bat  build_base.sh  build_target.bat  build_target.sh  flake.nix  generate_delink.symbol-map.patch  hellot.txt  result.txt  result.xt
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
docs/: data-manifest.md  reloc-rediscovery.md  scope.md
examples/: .gitignore  README.md  build.py
examples/01-basic/: basic.cpp  config.json
examples/02-data-manifest/: config.json  table.cpp
examples/03-reloc-recovery/: absref.cpp  config.json
objdiff/: objdiff.json
objdiff/base_/: objdiff.json
src/: contribution_manifest.rs  data_manifest.rs  data_section_manifest.rs  main.rs  object_files.rs  pdb_symbols.rs  reloc_alias_manifest.rs  reloc_manifest.rs  relocs.rs  symbol_matcher.rs  utils.rs
