[package]
name = "vostok-delinker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics", "must_cast"] }
capstone = "0.14.0"
clap = { version = "4.5.41", features = ["derive", "env"] }
msvc-demangler = "0.11.0"
pdb2 = "0.10.1"

object = {
  git = "https://github.com/srp-survarium/object",
  rev = "76af56e7c23fffa02bb9c561e6bbb7e137e7d974",
  features = ["pe", "write_core"],
}
