[package]
name = "vostok-delinker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive", "min_const_generics", "must_cast"] }
capstone = "0.14.0"
clap = { version = "4.5.41", features = ["derive", "env"] }
msvc-demangler = "0.11.0"
object = { version = "0.39.0", features = ["pe", "write_core"] }
pdb2 = "0.10.1"

[lints.clippy]
collapsible_if = "allow"
manual_is_multiple_of = "allow"
new_without_default = "allow"
single_match = "allow"
